--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class='col-12'> 
            <nav id="nav"> 
             <ul class='button wrap'>
-                <button data-toggle="modal" data-target="#lilies_modal">
+              <button data-toggle="modal" data-target="#lilies_modal">
             Lilies</button>
                 <button data-toggle="modal" data-target="#roses_modal">
                     Roses</button>
@@ -40,42 +40,6 @@
         </nav>
           </div>
              </div> 
-      <!-- Modal-Lilies -->
-<div class="modal fade" id="lilies_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-       <!-- Modal-Roses -->
-<div class="modal fade" id="roses_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
 
           <div class='row'>
          <div class='col-8'>
@@ -97,8 +61,7 @@
                 </div>
                 <!--end side by side-->
                 <section id='Locations'> 
-                <h5>
-                    LOCATIONS: <span> Paola|Olathe|Ottawa|Springhill </span>
+                <h5> LOCATIONS: <span> Paola|Olathe|Ottawa|Springhill </span>
                     </h5>
                 </section>
                 </div>
@@ -140,3 +103,44 @@
      <footer> The End </footer>
          </div>                 
      </div>
+          
+                <!-- Modal-Lilies -->
+<div class="modal fade" id="lilies_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        Lilium is a genus of herbaceous flowering plants growing from bulbs, all with large prominent flowers. Lilies are a group of flowering plants which are important in culture.
+          <img src='images/lilies.jpg'> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+          <!-- Modal-Roses -->
+<div class="modal fade" id="roses_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        A prickly bush or shrub that typically bears red, pink, yellow, or white fragrant flowers, native to north temperate regions. Numerous hybrids and cultivars have been developed.
+          <img src="images/roses.jpg">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+    <script src='js/jquery.min.js'></script>
+    <script src='js/bootstrap.min.js'></script>
+    <script src='js/main.js'></script>
