--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
       <div class="modal-body">
         Lilium is a genus of herbaceous flowering plants growing from bulbs, all with large prominent flowers. Lilies are a group of flowering plants which are important in culture.
           <img src='images/lilies.jpg'> 
-      </div>
+     <p> Source:</p> <span> <a href='https://www.almanac.com/plant/lilies'> 
+          </a>
+          </span>
+        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
@@ -134,7 +137,10 @@
       <div class="modal-body">
         A prickly bush or shrub that typically bears red, pink, yellow, or white fragrant flowers, native to north temperate regions. Numerous hybrids and cultivars have been developed.
           <img src="images/roses.jpg">
-      </div>
+        <p> Source:</p> <span> <a href='https://www.ftd.com/all-roses-ctg/product-roses'> 
+          </a>
+          </span>
+        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
