--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <meta http-equiv="X-UA-Compatiable" content="IE=EDGE"> 
 
 <!--links to css and fonts-->   
- 
- <link rel="stylesheet" type="text/css" href="css/styles.css">
- <link rel="stylesheet" type="text/css" href="css/framework.css">
- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">        
+ <link rel="stylesheet" type="text/css" href="css/final.min.css">  
+ <link rel="stylesheet" type="text/css" href="css/styles.css">        
         <title>Flower Power</title>
   
  
@@ -23,12 +21,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="https://www.1800flowers.com/"></script>
-    <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="row" id="header">
-        <div class="col-md-2"><img class="title-logo" src="images/flowerlogo.png">
+        <div class="col-md-2"><img class="img-responsive" src="images/flowerlogo.png">
         </div>
         <div class="col-md-10 text-right text-uppercase">
           <h1 class="title-super text-thin">Lainey Dent</h1>
@@ -50,30 +47,28 @@
         </div>
       </div>
       <div class="row text-center text-uppercase">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img class="img-responsive" src="images/flower2.jpg" data-toggle="modal" data-target="#project1">
           <h3>Plumeria</h3>
           <p>
             <a class="flower-link" href="https://www.1800flowers.com/">Click Me</a>
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img class="img-responsive" src="images/flower4.jpg" data-toggle="modal" data-target="#project2">
           <h3>Rose</h3>
           <p>
             <a class="flower-link" href="https://www.1800flowers.com/">Click Me</a>
           </p>
         </div>
-      </div>
-      <div class="row text-center text-uppercase">
-      <div class="col-md-6">
+    <div class="col-md-4"> 
         <img class="img-responsive" src="images/flower3.jpg" data-toggle="modal" data-target="#project3">
         <h3>Daisy</h3>
         <p>
           <a class="flower-link" href="https://www.1800flowers.com/">Click Me</a>
         </p>
-      </div>
-      </div>
+    <div>
+        </div>
     </div>
 
     <!-- Modal -->
@@ -129,10 +124,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </body>
-</html>
-                                        <script src='js/jquery.min.js'></script>
-                                        <script src='js/bootstrap.min.js'></script>
-                                        <script src='js/main.js'></script>
-                                        <script src='bootstrap'async> </script>
+    <script src='jquery.min.js'></script>
+                                        
+                                        
